# model_context_framework

./: .gitignore  CONTRIBUTING.rst  HISTORY.rst  Makefile  README.rst  pyproject.toml  requirements_dev.txt  tox.ini
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
src/: server_app.py  test_client.py  tool_mapping.py
src/autogen/: agents.py  autogen_example1.py  autogen_example2.py  config.py
src/config/: __init__.py  config_models.py
src/examples/: advanced_mcp_client.py  example_client_sse.py  llm_check.py  mcp_example_weather.py  mcp_server.py  nws_simple_server.py  simple_mcp_server.py
src/llms/: __init__.py  lmstudio_llm.py
src/mcp_client/: detailed_client_sse.py  example_client_stdio.py  langchain_client_adapter.py  mcp_client_callbacks.py  tool_injector.py  tools.py
src/mcp_server/: __init__.py  mcp_extension.py  mcp_server_sse.py  plain_server_sse.py  plain_server_stdio.py
src/model_context_framework/: __init__.py  cli.py
src/tools/: __init__.py  additional_tools.py  standard_tools.py
src/tools/persist_tools/: dynamic_example_tool_1743773333.py
tests/: __init__.py  test_model_context_framework.py
