[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "model_context_framework"
version = "0.1.0"
description = "Developing, experimenting and extending tools for model context protocol frameworks to make AI contextualization much better"
readme = "README.rst"
authors = [
  {name = "Sheshank Joshi", email = "sheshank.joshi@gmail.com"}
]
maintainers = [
  {name = "Sheshank Joshi", email = "sheshank.joshi@gmail.com"}
]
classifiers = [

]
license = {text = "MIT license"}
dependencies = [
  
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/SheshankJoshi/model_context_framework/issues"
changelog = "https://github.com/SheshankJoshi/model_context_framework/blob/master/changelog.md"
homepage = "https://github.com/SheshankJoshi/model_context_framework"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

